k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbadet-vitrine
  namespace: default # TODO: aligner sur le namespace réellement utilisé par skillforge si différent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mbadet.fr
        - www.mbadet.fr
      secretName: mbadet-vitrine-tls
  rules:
    - host: mbadet.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mbadet-vitrine
                port:
                  number: 80
    - host: www.mbadet.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mbadet-vitrine
                port:
                  number: 80
